<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Greed</string>
    <string name="new_game">New game</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_game_title">Enter player names</string>
    <string name="add_player">Add player</string>
    <string name="start_game">Start game</string>
    <string name="player">Player</string>
    <string name="new_player_empty_error">Enter player name</string>
    <string name="current_player">Current player:</string>
    <string name="score">Total score:</string>
    <string name="round_score">Round score:</string>
    <string name="scorebutton">Score</string>
    <string name="save">Save</string>
    <string name="roll">Roll dice</string>
    <string name="turn_ended">Your turn is over.</string>

</resources>
