<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/newGameTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/new_game_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout     
        android:id="@+id/playerNameContainer"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">

        
    </LinearLayout>
    
    <Button        
        android:id="@+id/addPlayerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_player"/>   
         
    <Button
        android:id="@+id/startGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_game"/>
    
</LinearLayout>
